mobile-nav:ok & mobile design:ok

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 
 <body>
     <div class="main--container">
+        <nav class="mobile--nav" id="mobile-nav">
+            <ul class="nav--buttons">
+                <li class="nav--button--area">
+                    <a class="nav--a" href="#"><button class="nav--button">Hakkımda</button></a>
+                </li>
+                <li class="nav--button--area">
+                    <a class="nav--a" href="#abilities"><button class="nav--button">Yeteneklerim</button></a>
+                </li>
+                <li class="nav--button--area">
+                    <a class="nav--a" href="#my-projects"><button class="nav--button">Projelerim</button></a>
+                </li>
+                <li class="nav--button--area">
+                    <a class="nav--a" href="#contact"><button class="nav--button">İletişim</button></a>
+                </li>
+            </ul>
+        </nav>
         <nav class="main--nav--area">
             <div class="space--box"></div>
             <div class="nav--buttons--area">
@@ -30,11 +46,11 @@
                     </li>
                 </ul>
             </div>
-            <div class="mobile--nav--button">
+            <div id="btn-mobile-nav" class="mobile--nav--button">
                 <ion-icon name="menu-outline"></ion-icon>
             </div>
         </nav>
-        <div class="main--body--area">
+        <div class="main--body--area" id="main-body">
             <div class="my--info--area">
                 <div class="my--profile--picture--area"></div>
                 <div class="my--info--text--area">
