--- a/index.html
+++ b/index.html
@@ -1,162 +1,246 @@
 <!DOCTYPE html>
 <html lang="tr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gökay Baz - Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./style_for_mobile.css">
-</head>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style_for_mobile.css" />
+  </head>
 
-<body>
+  <body>
     <div class="main--container">
-        <nav class="mobile--nav" id="mobile-nav">
-            <ul class="nav--buttons">
-                <li class="nav--button--area">
-                    <a class="nav--a" href="#"><button class="nav--button">Hakkımda</button></a>
-                </li>
-                <li class="nav--button--area">
-                    <a class="nav--a" href="#abilities"><button class="nav--button">Yeteneklerim</button></a>
-                </li>
-                <li class="nav--button--area">
-                    <a class="nav--a" href="#my-projects"><button class="nav--button">Projelerim</button></a>
-                </li>
-                <li class="nav--button--area">
-                    <a class="nav--a" href="#contact"><button class="nav--button">İletişim</button></a>
-                </li>
-            </ul>
-        </nav>
-        <nav class="main--nav--area">
-            <div class="space--box"></div>
-            <div class="nav--buttons--area">
-                <ul class="nav--buttons">
-                    <li class="nav--button--area">
-                        <a href="#"><button class="nav--button">Hakkımda</button></a>
-                    </li>
-                    <li class="nav--button--area">
-                        <a href="#abilities"><button class="nav--button">Yeteneklerim</button></a>
-                    </li>
-                    <li class="nav--button--area">
-                        <a href="#my-projects"><button class="nav--button">Projelerim</button></a>
-                    </li>
-                    <li class="nav--button--area">
-                        <a href="#contact"><button class="nav--button">İletişim</button></a>
-                    </li>
-                </ul>
-            </div>
-            <div id="btn-mobile-nav" class="mobile--nav--button">
-                <ion-icon name="menu-outline"></ion-icon>
-            </div>
-        </nav>
-        <div class="main--body--area" id="main-body">
-            <div class="my--info--area">
-                <div class="my--profile--picture--area"></div>
-                <div class="my--info--text--area">
-                    <h1 class="my--info--text--title"> Merhaba Hoşgeldin!</h1>
-                    <p class="my--info--text">Ben Gökay Baz, Junior Web Geliştiriciyim. <br> 19 yaşındayım,
-                        Adana'da yaşıyorum. <br> Benim hakkımda daha fazla bilgi için sitede dolaşmaya devam et :)</p>
-                </div>
-            </div>
-            <div class="my--social--medias--area">
-                <div class="social--media--buttons">
-                    <button id="btn-instagram" class="my--social--media--button"><ion-icon class="my--social--media--button--icon"
-                        name="logo-instagram"></ion-icon>Instagram</button>
-                <button id="btn-youtube" class="my--social--media--button"><ion-icon class="my--social--media--button--icon"
-                        name="logo-youtube"></ion-icon>Youtube</button>
-                <button id="btn-linkedIn" class="my--social--media--button"><ion-icon class="my--social--media--button--icon"
-                        name="logo-linkedin"></ion-icon>LinkedIn</button>
-                <button id="btn-twitter" class="my--social--media--button"><ion-icon class="my--social--media--button--icon"
-                        name="logo-twitter"></ion-icon>Twitter</button>
-                <button id="btn-github" class="my--social--media--button"><ion-icon class="my--social--media--button--icon"
-                        name="logo-github"></ion-icon>Github</button>
-                </div>
-                <div class="social--media--text--area">
-                    <p class="social--media--text">
-                        Sosyal Medya Hesaplarım !
-                    </p>
-                </div>
-            </div>
-            <hr class="main--hr" id="abilities">
-            <div class="my--abilities--area">
-                <div class="abilities--title--area">
-                    <h1 class="abilities--title--text sub--title--text">Yeteneklerim</h1>
-                </div>
-                <div class="my--abilities">
-                    <div class="my--ability">
-                        <ion-icon class="my--ability--icon" name="logo-html5"></ion-icon>
-                        HTML5
-                    </div>
-                    <div class="my--ability">
-                        <ion-icon class="my--ability--icon" name="logo-css3"></ion-icon>
-                        CSS3
-                    </div>
-                    <div class="my--ability">
-                        <ion-icon class="my--ability--icon" name="logo-figma"></ion-icon>
-                        UI & UX
-                    </div>
-                    <div class="my--ability">
-                        <ion-icon class="my--ability--icon" name="logo-javascript"></ion-icon>
-                        JavaScript
-                    </div>
-
-                    <div class="my--ability">
-                        <ion-icon class="my--ability--icon" name="logo-nodejs"></ion-icon>
-                        Node JS
-                    </div>
-                    <div class="my--ability">
-                        <ion-icon class="my--ability--icon" name="logo-react"></ion-icon>
-                        React JS
-                    </div>
-                </div>
-            </div>
-            <hr class="main--hr" id="my-projects">
-            <div class="my--projects--area">
-                <div class="my--projects--title--area">
-                    <h1 class="my--project--title--text sub--title--text">Projelerim</h1>
-                </div>
-                <div class="my--projects">
-                    <div class="my--project"></div>
-                </div>
-            </div>
-            <hr class="main--hr" id="contact">
-            <div class="contact--area">
-                <div class="contact--title--area">
-                    <h1 class="contact--title--text sub--title--text">İletişim</h1>
-                </div>
-                <div class="contact--form--area">
-                    <form class="contact--form" action="" method="post">
-                        <div class="contact--form--input--component">
-                            <h3 class="contact--input--title">Ad Soyad</h3>
-                            <input placeholder="Adınızı ve Soyadınızı giriniz..." type="text" class="contact--input" id="inp-name-surname">
-                        </div>
-                        <div class="contact--form--input--component">
-                            <h3 class="contact--input--title">E-Posta</h3>
-                            <input placeholder="E-posta adresinizi giriniz..." type="email" class="contact--input" id="inp-email">
-                        </div>
-                        <div class="contact--form--input--component">
-                            <h3 class="contact--input--title">Mesaj</h3>
-                            <textarea placeholder="Mesajınızı giriniz..." class="contact--input" id="inp-message" cols="30" rows="10"></textarea>
-                        </div>
-                        <div class="contact--form--button--component">
-                            <div></div>
-                            <input type="submit" class="contact--form--submit--button">
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <hr class="main--hr">
-            <div class="footer--area">
-                <div class="author--area">
-                    <h3 class="author--text">Tasarlayan ve Geliştiren : Gökay Baz</h3>
-                </div>
-            </div>
+      <nav class="mobile--nav" id="mobile-nav">
+        <ul class="nav--buttons">
+          <li class="nav--button--area">
+            <a class="nav--a" href="#"
+              ><button class="nav--button">Hakkımda</button></a
+            >
+          </li>
+          <li class="nav--button--area">
+            <a class="nav--a" href="#abilities"
+              ><button class="nav--button">Yeteneklerim</button></a
+            >
+          </li>
+          <li class="nav--button--area">
+            <a class="nav--a" href="#my-projects"
+              ><button class="nav--button">Projelerim</button></a
+            >
+          </li>
+          <li class="nav--button--area">
+            <a class="nav--a" href="#contact"
+              ><button class="nav--button">İletişim</button></a
+            >
+          </li>
+        </ul>
+      </nav>
+      <nav class="main--nav--area">
+        <div class="space--box"></div>
+        <div class="nav--buttons--area">
+          <ul class="nav--buttons">
+            <li class="nav--button--area">
+              <a href="#"><button class="nav--button">Hakkımda</button></a>
+            </li>
+            <li class="nav--button--area">
+              <a href="#abilities"
+                ><button class="nav--button">Yeteneklerim</button></a
+              >
+            </li>
+            <li class="nav--button--area">
+              <a href="#my-projects"
+                ><button class="nav--button">Projelerim</button></a
+              >
+            </li>
+            <li class="nav--button--area">
+              <a href="#contact"
+                ><button class="nav--button">İletişim</button></a
+              >
+            </li>
+          </ul>
         </div>
-    </div>
-    <script src="./script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</body>
+        <div id="btn-mobile-nav" class="mobile--nav--button">
+          <ion-icon name="menu-outline"></ion-icon>
+        </div>
+      </nav>
+      <div class="main--body--area" id="main-body">
+        <div class="my--info--area">
+          <div class="my--profile--picture--area"></div>
+          <div class="my--info--text--area">
+            <h1 class="my--info--text--title">Merhaba Hoşgeldin!</h1>
+            <p class="my--info--text">
+              Ben Gökay Baz, Junior Web Geliştiriciyim. <br />
+              19 yaşındayım, Adana'da yaşıyorum. <br />
+              Benim hakkımda daha fazla bilgi için sitede dolaşmaya devam et :)
+            </p>
+          </div>
+        </div>
+        <div class="my--social--medias--area">
+          <div class="social--media--buttons">
+            <button id="btn-instagram" class="my--social--media--button">
+              <ion-icon
+                class="my--social--media--button--icon"
+                name="logo-instagram"
+              ></ion-icon
+              >Instagram
+            </button>
+            <button id="btn-youtube" class="my--social--media--button">
+              <ion-icon
+                class="my--social--media--button--icon"
+                name="logo-youtube"
+              ></ion-icon
+              >Youtube
+            </button>
+            <button id="btn-linkedIn" class="my--social--media--button">
+              <ion-icon
+                class="my--social--media--button--icon"
+                name="logo-linkedin"
+              ></ion-icon
+              >LinkedIn
+            </button>
+            <button id="btn-twitter" class="my--social--media--button">
+              <ion-icon
+                class="my--social--media--button--icon"
+                name="logo-twitter"
+              ></ion-icon
+              >Twitter
+            </button>
+            <button id="btn-github" class="my--social--media--button">
+              <ion-icon
+                class="my--social--media--button--icon"
+                name="logo-github"
+              ></ion-icon
+              >Github
+            </button>
+          </div>
+          <div class="social--media--text--area">
+            <p class="social--media--text">Sosyal Medya Hesaplarım !</p>
+          </div>
+        </div>
+        <hr class="main--hr" id="abilities" />
+        <div class="my--abilities--area">
+          <div class="abilities--title--area">
+            <h1 class="abilities--title--text sub--title--text">
+              Yeteneklerim
+            </h1>
+          </div>
+          <div class="my--abilities">
+            <div class="my--ability">
+              <ion-icon class="my--ability--icon" name="logo-html5"></ion-icon>
+              HTML5
+            </div>
+            <div class="my--ability">
+              <ion-icon class="my--ability--icon" name="logo-css3"></ion-icon>
+              CSS3
+            </div>
+            <div class="my--ability">
+              <ion-icon class="my--ability--icon" name="logo-figma"></ion-icon>
+              UI & UX
+            </div>
+            <div class="my--ability">
+              <ion-icon
+                class="my--ability--icon"
+                name="logo-javascript"
+              ></ion-icon>
+              JavaScript
+            </div>
 
+            <div class="my--ability">
+              <ion-icon class="my--ability--icon" name="logo-nodejs"></ion-icon>
+              Node JS
+            </div>
+            <div class="my--ability">
+              <ion-icon class="my--ability--icon" name="logo-react"></ion-icon>
+              React JS
+            </div>
+          </div>
+        </div>
+        <hr class="main--hr" id="my-projects" />
+        <div class="my--projects--area">
+          <div class="my--projects--title--area">
+            <h1 class="my--project--title--text sub--title--text">
+              Projelerim
+            </h1>
+          </div>
+          <div class="my--projects">
+            <div class="my--project"></div>
+          </div>
+        </div>
+        <hr class="main--hr" id="contact" />
+        <div class="contact--area">
+          <div class="contact--title--area">
+            <h1 class="contact--title--text sub--title--text">İletişim</h1>
+          </div>
+          <div class="contact--form--area">
+            <form class="contact--form" action="" method="post">
+              <div class="contact--form--input--component">
+                <h3 class="contact--input--title">Ad Soyad</h3>
+                <input
+                  placeholder="Adınızı ve Soyadınızı giriniz..."
+                  type="text"
+                  class="contact--input"
+                  id="inp-name-surname"
+                />
+              </div>
+              <div class="contact--form--input--component">
+                <h3 class="contact--input--title">E-Posta</h3>
+                <input
+                  placeholder="E-posta adresinizi giriniz..."
+                  type="email"
+                  class="contact--input"
+                  id="inp-email"
+                />
+              </div>
+              <div class="contact--form--input--component">
+                <h3 class="contact--input--title">Mesaj</h3>
+                <textarea
+                  placeholder="Mesajınızı giriniz..."
+                  class="contact--input"
+                  id="inp-message"
+                  cols="30"
+                  rows="10"
+                ></textarea>
+              </div>
+              <div class="contact--form--button--component">
+                <div></div>
+                <input type="submit" class="contact--form--submit--button" />
+              </div>
+            </form>
+          </div>
+        </div>
+        <hr class="main--hr" />
+        <div class="footer--area">
+          <div class="author--area">
+            <h3 class="author--text">Tasarlayan ve Geliştiren : Gökay Baz</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js"
+      defer
+    ></script>
+    <script>
+      window.OneSignalDeferred = window.OneSignalDeferred || [];
+      OneSignalDeferred.push(function (OneSignal) {
+        OneSignal.init({
+          appId: "0d79578f-309f-4713-a050-d8a26959b57d",
+          safari_web_id:
+            "web.onesignal.auto.32f1a686-ea76-4ac6-93be-f9d8958aaa5a",
+          notifyButton: {
+            enable: true,
+          },
+        });
+      });
+    </script>
+    <script src="./script.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
