--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Gökay Baz - Portfolio</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./style_for_mobile.css" />
+    <script>
+      OneSignal.Notifications.requestPermission();
+    </script>
   </head>
 
   <body>
@@ -221,7 +224,6 @@
       defer
     ></script>
     <script>
-      OneSignal.Notifications.requestPermission();
       window.OneSignalDeferred = window.OneSignalDeferred || [];
       OneSignalDeferred.push(function (OneSignal) {
         OneSignal.init({
@@ -234,6 +236,7 @@
         });
       });
     </script>
+
     <script src="./script.js"></script>
     <script
       type="module"
